--- a/BD_Shop/app/templates/app/layout.html
+++ b/BD_Shop/app/templates/app/layout.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
+
+
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'fonts/Linearicons-Free-v1.0.0/icon-font.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'app/animate/animate.css' %}">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="{% static 'app/css-hamburgers/hamburgers.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'app/animsition/css/animsition.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'app/select2/select2.min.css' %}">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="{% static 'app/daterangepicker/daterangepicker.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'app/content/util.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'app/content/main.css' %}">
+<!--===============================================================================================-->
 </head>
 
 <body>
@@ -55,6 +79,23 @@
       $('.preloader').fadeOut().end().delay(400).fadeOut('slow');
     });
     </script>
+
+    <!--===============================================================================================-->
+	<script src="{% static 'app/scripts/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/scripts/popper.js' %}"></script>
+	<script src="{% static 'app/scripts/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/daterangepicker/moment.min.js' %}"></script>
+	<script src="{% static 'app/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'app/js/main.js' %}"></script>
 {% block scripts %}
     
     
