--- a/BD_Shop/app/static/app/content/site.css
+++ b/BD_Shop/app/static/app/content/site.css
@@ -100,3 +100,66 @@ input[type="checkbox"].input-validation-error {
         transform: scale(1);
     }
 }
+
+body {
+    background: #f2f2f2;
+}
+
+h1 {
+    position: relative;
+    text-align: center;
+    color: #353535;
+    font-size: 50px;
+    font-family: "Cormorant Garamond", serif;
+}
+
+h1:before {
+        position: absolute;
+        content: "";
+        bottom: -20px;
+        width: 150px;
+        height: 2px;
+        background: #e74c3c;
+}
+
+p {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    text-align: center;
+    color: #676767;
+}
+
+.buttons-coll {
+    width: 90%;
+    margin: 50px auto;
+    text-align: center;
+}
+
+button {
+    margin: 20px;
+}
+
+.custom-btn {
+    padding: 10px 25px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    background: transparent;
+    outline: none !important;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+}
+/**** BTN No. 1 ****/
+.btn-1 {
+    border: 2px solid #000;
+}
+
+.btn-1:hover {
+        background: #000;
+        color: #fff;
+}
+
+.btn-1:active {
+        top: 2px;
+}
